--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -1,16 +1,8 @@
 .wrapper
-<<<<<<< f022f9303256d5b79d2e2dbcb3126223e46aa337
-  +position(relative, 1)
-  background-color: $background-color
-=======
->>>>>>> wip
   transition: all .4s
   right: 0
   &.is-opened-drawer
     overflow: hidden
-<<<<<<< f022f9303256d5b79d2e2dbcb3126223e46aa337
-    right: 280px
-=======
     right: 17.5rem
 
 body
@@ -24,10 +16,22 @@ body
   max-width: 100%
   padding-left: 7rem
   padding-right: 15.5rem
+  +media-breakpoint-down(sm)
+    +padding(horizontal, 1rem)
   &.has-no-right-padding
     padding-right: 13rem
+    +media-breakpoint-down(sm)
+      +padding(horizontal, 1rem)
   body.no-global-nav &
     padding-left: 3rem
+    +media-breakpoint-down(sm)
+      +padding(horizontal, 1rem)
   body.no-recent-reports &
     padding-right: 3rem
->>>>>>> wip
+    +media-breakpoint-down(sm)
+      +padding(horizontal, 1rem)
+
+.home-index
+  .container
+    max-width: 75rem
+    +padding(horizontal, 1rem)
