--- a/app/assets/stylesheets/blocks/_form.sass
+++ b/app/assets/stylesheets/blocks/_form.sass
@@ -36,5 +36,14 @@
   display: flex
   align-items: flex-end
   justify-content: center
+  +media-breakpoint-down(sm)
+    flex-direction: column
 .form-actions__item
   +padding(horizontal, .375rem)
+  +media-breakpoint-down(sm)
+    width: 100%
+    +padding(horizontal, 0)
+    &:nth-child(2)
+      margin-top: .75rem
+    > *
+      width: 100%
