--- a/app/assets/stylesheets/blocks/auth-form/_auth-form.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form.sass
@@ -1,5 +1,10 @@
+.auth-form-logo-image
+  width: 15rem
+  display: block
+  +margin(horizontal, auto)
+  margin-top: 4rem
 .auth-form
-  +margin(vertical, 6rem 4rem)
+  +margin(vertical, 4rem 4rem)
   width: 22rem
   background-color: $base-color
   +margin(horizontal, auto)
