--- a/app/assets/stylesheets/blocks/user/_user-find-job-assist.sass
+++ b/app/assets/stylesheets/blocks/user/_user-find-job-assist.sass
@@ -1,5 +1,6 @@
 .user-find-job-assist
-  background-color: #b04d4d
+  background-color: $accent-color
   +padding(vertical, .25rem)
+  margin-top: -.0625rem
 .user-find-job-assist__value
-  +text-block(.875rem 1.45, $reversal-text)
+  +text-block(.875rem 1.45, $main-color)
