--- a/app/assets/stylesheets/settings/helpers/long-text.sass
+++ b/app/assets/stylesheets/settings/helpers/long-text.sass
@@ -41,5 +41,6 @@
     +margin(horizontal, auto)
     margin-bottom: 2rem
     display: block
+    max-width: 100%
   *:last-child
     margin-bottom: 0
