--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,11 @@
 - content_for(:page_classes, 'no-recent-reports' 'no-global-nav')
+.main-visual
+  .container
+    = image_tag('logo.svg')
+    p
+      | ２５６インターンではお金を払って行くスクールとお金を貰ってやるアルバイトの中間地点として、
+      | １週間毎に学習と作業を交換することにより、誰もお金を払わないインターンシップを実現します。
+
 section
   header
     .container
@@ -29,7 +36,7 @@ section
         h3 学習と作業の交換
         p 学習週と作業週を交互に繰り返す。
 section
-  header.page-header
+  header
     .container
       h2 ローカルとリモート
   .container
@@ -42,7 +49,7 @@ section
       br/
       | リモートであればオフィスに通えない場所に済む人や昼間学校や会社、子育てで忙しい人でも参加できます。
 section
-  header.page-header
+  header
     .container
       h2 参加企業
   .container
