--- a/app/assets/stylesheets/blocks/_header.sass
+++ b/app/assets/stylesheets/blocks/_header.sass
@@ -10,6 +10,10 @@ $header-height: 3.125rem
 
 .header-links
   height: 100%
+  display: flex
+  align-items: center
+  +media-breakpoint-down(sm)
+    display: none
 .header-links__items
   display: flex
   height: 100%
@@ -26,3 +30,13 @@ $header-height: 3.125rem
 
 .header__title
   color: $default-text
+
+.header-show-mobile-nav
+  display: none
+  +media-breakpoint-down(sm)
+    display: flex
+    height: 100%
+    justify-content: center
+    align-items: center
+    width: 3rem
+    margin-right: -1rem
