--- a/app/views/admin/categories/edit.html.slim
+++ b/app/views/admin/categories/edit.html.slim
@@ -1,6 +1,8 @@
 header.page-header
   .container
-    h1.page-header__title= t('editing_category')
+    .page-header__container
+      h1.page-header__title
+        = t('editing_category')
 
 .page-body
   .container
