--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -3,30 +3,39 @@ header.page-header
     .page-header__container
       h1.page-header__title
         = t('listing_categories')
-      = link_to new_admin_category_path, class: 'is-button-standard-md-warning' do
-        i.fa.fa-plus
-        = t('new_category')
+      .page-header__action
+        = link_to new_admin_category_path, class: 'is-button-standard-md-warning' do
+          i.fa.fa-plus
+          = t('new_category')
 .page-body
   .container
-    table.categories
-      thead.categories__header
-        tr.categories__labels
-          th.categories__label= t('activerecord.attributes.category.name')
-          th.categories__label= t('activerecord.attributes.category.slug')
-          th.categories__label.actions= t('action')
-          th.categories__label.handle= t('order')
-      tbody.categories__items
+    table.admin-table
+      thead.admin-table__header
+        tr.admin-table__labels
+          th.admin-table__label
+            = t('activerecord.attributes.category.name')
+          th.admin-table__label
+            = t('activerecord.attributes.category.slug')
+          th.admin-table__label.actions
+            = t('action')
+          th.admin-table__label.handle
+            = t('order')
+      tbody.admin-table__items
         - @categories.each do |category|
-          tr.categories__item
-            td.categories__item-value= category.name
-            td.categories__item-value= category.slug
-            td.categories__item-value.is-text-align-center
-              .btn-group
-                = link_to edit_admin_category_path(category), class: 'is-button-standard-sm-primary is-icon' do
-                  i.fa.fa-pencil
-                = link_to [:admin, category], data: { confirm: t('are_you_sure') }, method: :delete, class: 'is-button-standard-sm-danger is-icon' do
-                  i.fa.fa-trash-o
-            td.categories__item-value.is-text-align-center
+          tr.admin-table__item
+            td.admin-table__item-value
+              = category.name
+            td.admin-table__item-value
+              = category.slug
+            td.admin-table__item-value.is-text-align-center
+              ul.is-button-group
+                li
+                  = link_to edit_admin_category_path(category), class: 'is-button-standard-sm-primary is-icon' do
+                    i.fa.fa-pencil
+                li
+                  = link_to [:admin, category], data: { confirm: t('are_you_sure') }, method: :delete, class: 'is-button-standard-sm-danger is-icon' do
+                    i.fa.fa-trash-o
+            td.admin-table__item-value.is-text-align-center
               ul.is-button-group
                 li
                   = link_to admin_category_position_path(category, move: :top), method: :put, class: 'is-button-standard-sm-secondary is-icon'
