--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -5,5 +5,5 @@ header.page-header.is-margin-bottom-0
 .page-body
   .container
     .row
-      .col-xs-12.col-sm-6.col-sm-offset-3
+      .col-xs-12.col-md-6.col-sm-offset-3
         = render 'form', user: @user
