--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -1,46 +1,79 @@
 - title @user.login_name
-
+- if current_user.admin? && @user.find_job_assist?
+  .user-find-job-assist
+    .container
+      .user-find-job-assist__value
+        | 就職支援希望者
 header.page-header
   .container
-    h1.page-header__title= @user.login_name
+    .page-header__container
+      h2.page-header__title
+        = @user.login_name
+        |（#{t("activerecord.enums.user.purposes.#{@user.purpose}")}目的）
+      .page-header__action
+        = link_to admin_users_path, class: 'is-button-standard-md-secondary' do
+          i.fa.fa-angle-left
+          = t('interns')
 
 .page-body
   .container
-    .icon= gravatar_tag @user, size: 100
-    dl
-      dt= t('helpers.label.user.login_name')
-      dd= @user.login_name
-      dt= t('helpers.label.user.full_name')
-      dd= @user.full_name
-      dt= t('helpers.label.user.company')
-      dd= @user.company.name
-      dt= t('helpers.label.user.description')
-      dd= simple_format @user.description
-      dt= t('helpers.label.user.created_at')
-      dd= l @user.created_at.to_date
-      dt= t('helpers.label.user.part')
-      dd= t(@user.part)
-      dt= t('helpers.label.user.purpose')
-      dd= t("activerecord.enums.user.purposes.#{@user.purpose}")
-      dt= t('helpers.label.user.find_job_assist')
-      dd= user_find_job_assist(@user)
-      dt= t('helpers.label.user.updated_at')
-      dd= l @user.updated_at, format: :long
-      - if @user.github_account?
-        dt= t('helpers.label.user.github_account')
-        dd= link_to @user.github_account, user_github_url(@user)
-      - if @user.twitter_url?
-        dt= t('helpers.label.user.twitter')
-        dd= link_to '@' + @user.twitter_id, 'https://twitter.com/' + @user.twitter_id
-      - if @user.facebook_url?
-        dt= t('helpers.label.user.facebook_url')
-        dd= link_to @user.facebook_url, @user.facebook_url
-      - if @user.blog_url?
-        dt= t('helpers.label.user.blog_url')
-        dd
-          = link_to @user.blog_url, @user.blog_url
-          - if @user.feed_url?
-            = link_to @user.feed_url do
-              i.icon-rss
+    .admin-user
+      .row
+        .col-md-3.col-xs-12
+          = gravatar_tag @user, size: 500, html: { class: "is-user-icon-xl" }
+          .user-dates
+            .user-dates__created-at
+              .user-dates__created-at-label
+                = t('helpers.label.user.created_at')
+              .user-dates__created-at-value
+                = l @user.created_at.to_date
+            .user-dates__update-at
+              .user-dates__update-at-label
+                = t('helpers.label.user.updated_at')
+              .user-dates__update-at-value
+                = l @user.updated_at, format: :long
+        .col-md-9.col-xs-12
+          table.admin-table
+            thead.admin-table__header
+              tr.admin-table__labels
+                th.admin-table__label
+                  | インターン情報
+            tbody.admin-table__items
+              tr.admin-table__item
+                td.admin-table__item-value.is-white-space-nowrap
+                  .user-part(class="is-#{@user.part}")
+                    = t(@user.part)
+                  = @user.login_name
+                  | （#{@user.full_name}）
+                  = @user.company.name
+              tr.admin-table__item
+                td.admin-table__item-value
+                  ul.is-button-group
+                    - if @user.github_account?
+                      li
+                        = link_to user_github_url(@user), class: 'is-button-standard-sm-secondary is-icon' do
+                          i.fa.fa-github-alt
+                    - if @user.twitter_url?
+                      li
+                        = link_to 'https://twitter.com/' + @user.twitter_id, class: 'is-button-standard-sm-secondary is-icon' do
+                          i.fa.fa-twitter
+                    - if @user.facebook_url?
+                      li
+                        = link_to @user.facebook_url, class: 'is-button-standard-sm-secondary is-icon' do
+                          i.fa.fa-facebook
+                    - if @user.blog_url?
+                      li                  
+                        = link_to @user.blog_url, class: 'is-button-standard-sm-secondary is-icon' do
+                          i.fa.fa-home
+                        - if @user.feed_url?
+                          li                  
+                            = link_to @user.feed_url, class: 'is-button-standard-sm-secondary is-icon' do
+                              i.fa.fa-rss            
+              tr.admin-table__item
+                td.admin-table__item-value
+                  = simple_format @user.description
 
-    .edit= link_to "編集", edit_admin_user_path(@user)
+      .form-actions
+        ul.form-actions__items
+          li.form-actions__item
+            = link_to "編集", edit_admin_user_path(@user), class: 'is-button-standard-lg-warning'
