--- a/app/views/pages/show.html.slim
+++ b/app/views/pages/show.html.slim
@@ -2,13 +2,19 @@
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title
+      h1.page-header__title
         = @page.title
+      .page-header__action
+        = link_to "/pages/new", class: 'is-button-standard-md-warning' do
+          i.fa.fa-plus
+          | 新規ページ
 
-.card
-  .card-block
-    .js-target-blank.is-long-text-style
-      = markdown @page.body
+.page-body
+  .container
+    .card
+      .card-block
+        .js-target-blank.is-long-text-style
+          = markdown @page.body
 
 .btn-group
   = link_to "編集", "/pages/#{@page.title}/edit", class: 'btn btn-primary'
