--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -4,39 +4,39 @@
   .form__items
     .form-item
       .row
-        .col-sm-6
+        .col-md-6.col-xs-12
           = f.label :category_id, class: 'form-item__label'
           .is-button-standard-md-secondary.is-select.is-block
             = f.collection_select :category_id, Category.all, :id, :name, {}
     .form-item
       .row
-        .col-sm-6
+        .col-md-6.col-xs-12
           = f.label :title, class: 'form-item__label'
           = f.text_field :title, class: 'form-item__text-input js-warning-form'
     .form-item
       .row.js-markdown-parent
-        .col-sm-6
+        .col-md-6.col-xs-12
             = f.label :description, class: 'form-item__label'
             = f.text_area :description, class: 'form-item__textarea js-warning-form js-markdown-input practices-edit__input'
-        .col-sm-6
+        .col-md-6.col-xs-12
           .form-item__label
             | プレビュー
           .js-markdown-preview.is-long-text-style.practices-edit__input.practices-edit__preview
     .form-item
       .row.js-markdown-parent
-        .col-sm-6
+        .col-md-6.col-xs-12
           = f.label :goal, class: 'form-item__label'
           = f.text_area :goal, class: 'form-item__textarea js-markdown-input js-warning-form practices-edit__input'
-        .col-sm-6
+        .col-md-6.col-xs-12
           .form-item__label
             | プレビュー
           .js-markdown-preview.is-long-text-style.practices-edit__input.practices-edit__preview
   .form-actions
     ul.form-actions__items
       li.form-actions__item
-        = f.submit nil, class: 'is-button-standard-lg-warning'
-      li.form-actions__item
         - if params[:action] == 'new' || params[:action] == 'create'
           = link_to "キャンセル", practices_path, class: "is-button-standard-md-secondary"
         - elsif params[:action] == 'edit' || params[:action] == 'update'
           = link_to "キャンセル", practice_path, class: "is-button-standard-md-secondary"
+      li.form-actions__item
+        = f.submit nil, class: 'is-button-standard-lg-warning'
