--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -3,7 +3,7 @@
     = error_messages_for :report
   .form-item
     .row
-      .col-sm-6
+      .col-md-6.col-xs-12
         = f.label :title, class: 'form-item__label'
         - if @report_flag == true
           = f.text_field :title, class: 'form-item__text-input js-warning-form', value: '日報/' << @report_date.strftime("%Y/%m/%d/") << @user_name << ':'
@@ -17,26 +17,26 @@
             = f.text_field :title, size: '10', class: 'form-item__text-input js-warning-form'
   .form-item
     .row.js-markdown-parent
-      .col-sm-6
+      .col-md-6.col-xs-12
         = f.label :description, class: 'form-item__label'
         - if @report_copy_flag == true
           = f.text_area :description, class: 'form-item__textarea js-warning-form js-markdown-input practices-edit__input', value: @report_description
         - else
           = f.text_area :description, class: 'form-item__textarea js-warning-form js-markdown-input practices-edit__input'        
-      .col-sm-6
+      .col-md-6.col-xs-12
         .form-item__label
           | プレビュー
         .js-markdown-preview.is-long-text-style.practices-edit__preview.practices-edit__input
   .form-actions
     ul.form-actions__items
       li.form-actions__item
+        - if params[:action] == 'new' || params[:action] == 'create'
+          = link_to 'キャンセル', reports_path, class: 'is-button-standard-md-secondary'
+        - elsif params[:action] == 'edit' || params[:action] == 'update'
+          = link_to 'キャンセル', report_path, class: 'is-button-standard-md-secondary'
+      li.form-actions__item
         = button_tag(class: 'is-button-standard-lg-warning') do
           - if params[:action] == 'new' || params[:action] == 'create' || params[:action] == 'edit' || params[:action] == 'update'
             | 内容を保存
           - else
             | 内容を投稿
-      li.form-actions__item
-      - if params[:action] == 'new' || params[:action] == 'create'
-        = link_to 'キャンセル', reports_path, class: 'is-button-standard-md-secondary'
-      - elsif params[:action] == 'edit' || params[:action] == 'update'
-        = link_to 'キャンセル', report_path, class: 'is-button-standard-md-secondary'
