--- a/app/views/users/_user_item.slim
+++ b/app/views/users/_user_item.slim
@@ -10,3 +10,7 @@
     .users-item__body
       .users-item__description
         p= truncate(user.description, length: 100)
+      - if current_user.admin?
+        .users-item__edit
+          = link_to edit_admin_user_path(user), class: 'is-button-standard-xs-secondary' do
+            | 管理者として情報変更
