--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -11,9 +11,10 @@ header.page-header
         label.user-part(class= "is-#{@user.part}")
           = t(@user.part)  
         = @user.login_name
-      = link_to new_report_path, class: 'is-button-standard-md-secondary' do
-        i.fa.fa-angle-left
-        = t('interns')
+      .page-header__action
+        = link_to users_path, class: 'is-button-standard-md-secondary' do
+          i.fa.fa-angle-left
+          = t('interns')
 
 .page-body
   .container
@@ -29,12 +30,12 @@ header.page-header
               li.title= link_to practice.title, practice
 
     .row.is-gutter-width-32
-      .col-md-6
+      .col-md-6.col-xs-12
         = render 'users/user_data', user: @user
         - if @user.active_practices.present?
           = render 'users/active_practices', user: @user
         = render 'users/completed_practices', user: @user
 
       - if @reports.any?
-        .col-md-6
+        .col-md-6.col-xs-12
           = render 'users/user_reports', reports: @reports
