[WIP]日報とプラクティスの紐付け

--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -9,6 +9,12 @@
       = f.text_field :title, size: '10', class: 'form-control js-warning-form', value: @report_title
     - else
       = f.text_field :title, size: '10', class: 'form-control js-warning-form'
+  .form-group
+    = f.label :practice_id
+    - if @report_copy_flag == true
+      = f.text_field :practice_id, size: '10', class: 'form-control js-warning-form', value: @report_practice_id
+    - else
+      = f.text_field :practice_id, size: '10', class: 'form-control js-warning-form'
   .row.js-markdown-parent
     .col-sm-6
       .form-group
