--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -32,6 +32,7 @@
     .card-block
       ul.related-reports
         - @practice.reports.each do |report|
+        = binding.pry
           li.related-reports__report
             = link_to report do
               span=report.title
