--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -5,7 +5,6 @@ header.page-header
       h2.page-header__title
         = @report.title
       = link_to t('new_report'), new_report_path, class: 'btn btn-primary btn-md page-header__button'
-
 .page-body
   .container
     .report
@@ -15,8 +14,12 @@ header.page-header
           .report__author-name= @report.user.login_name
         time.report__created-at(datetime="#{@report.created_at.to_datetime}" pubdate="pubdate")
           = l @report.updated_at, format: :short
-      - if @practice.present?
-        = @practice.title
+      - if @report.practices.present?
+        - @report.practices.each do |practice|
+          li.report-practices__practice
+            = link_to practice do
+              span=practice.title
+          = practice.title
       .report__body.js-target-blank.is-long-text-style
         = markdown @report.description
       footer.report__footer
