--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -10,7 +10,7 @@
     - else
       = f.text_field :title, size: '10', class: 'form-control js-warning-form'
   .form-group
-    = f.label :practice_id
+    = f.label :practice
     = f.select :practice_ids, options_from_collection_for_select(Practice.all, :id, :title), {}, {multiple: true, name: 'report[practice_ids][]', class: 'form-control js-warning-form'}
   .row.js-markdown-parent
     .col-sm-6
