--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -15,10 +15,11 @@ header.page-header
         time.report__created-at(datetime="#{@report.created_at.to_datetime}" pubdate="pubdate")
           = l @report.updated_at, format: :short
       - if @report.practices.present?
-        - @report.practices.each do |practice|
-          li.report-practices__practice
-            = link_to practice do
-              span=practice.title
+        ul.report-practices__practices
+          - @report.practices.each do |practice|
+            li.report-practices__practice
+              = link_to practice do
+                span=practice.title
       .report__body.js-target-blank.is-long-text-style
         = markdown @report.description
       footer.report__footer
