fix mail setting

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -17,6 +17,7 @@
 
 @import oulu-mixins
 @import modules/web-fonts/font-awsome
+@import modules/buttons/buttons
 
 //////////////////////////////
 // initializers
