--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,6 +14,7 @@
 //////////////////////////////
 @import oulu-mixins
 @import modules/web-fonts/font-awsome
+@import modules/buttons/buttons
 //////////////////////////////
 // initializers
 //////////////////////////////
