学習内容追加

--- a/app/assets/stylesheets/blocks/main-visual/_main-visual.sass
+++ b/app/assets/stylesheets/blocks/main-visual/_main-visual.sass
@@ -28,7 +28,7 @@
   +position(absolute, left 0, bottom 0, right 0)
 
 .main-visual__link
-  background-color: #ec4963
+  background-color: rgba(#ec4963, .7)
   +size(13rem)
   border-radius: 50%
   +position(absolute, right 0, top 50%)
