--- a/app/views/home/_main_visual.slim
+++ b/app/views/home/_main_visual.slim
@@ -10,6 +10,9 @@
             = link_to "#eligibility", class: 'main-visual-nav__item-link' do
               | 参加資格
           li.main-visual-nav__item
+            = link_to "#tutorials", class: 'main-visual-nav__item-link' do
+              | 学習内容
+          li.main-visual-nav__item
             = link_to "#finding-employment", class: 'main-visual-nav__item-link' do
               | 就職支援
           li.main-visual-nav__item
