--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,6 +3,7 @@
 .welcome-sections
   = render('fee')
   = render('eligibility')
+  = render('tutorials')
   = render('finding_employment')
   = render('administrator')
   = render('other')
