--- a/app/views/home/_finding_employment.slim
+++ b/app/views/home/_finding_employment.slim
@@ -38,5 +38,5 @@ section.welcome-section#finding-employment
         | 卒業生の就職先
       .welcome-child-section__description
         p.is-text-align-center
-          | 僕らも驚くほどいい企業に就職しています。
+          | 僕らも驚くほどいい企業に就職しています（現在掲載許可申請中）。
       .welcome-small-sections
