--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -30,7 +30,7 @@ nav.sort-nav
   .container
     .sort-nav__inner
       .sort-nav__label
-        | チュートリアルで絞り込む:
+        | プラクティスで絞り込む:
       .is-button-standard-sm-secondary.is-select.sort-nav__select
         select
 
