--- a/app/views/practices/edit.html.slim
+++ b/app/views/practices/edit.html.slim
@@ -1,6 +1,7 @@
 .page-header
   .container
-    h1.page-header__title
-      = t('editing_practice')
+    .page-header__container
+      h1.page-header__title
+        = t('editing_practice')
 .container
   = render 'form', practice: @practice
