--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -4,17 +4,23 @@
   .form-item
     .row
       .col-md-6.col-xs-12
-        = f.label :title, class: 'a-label'
-        - if @report_flag == true
-          = f.text_field :title, class: 'a-text-input js-warning-form', value: '日報/' << @report_date.strftime("%Y/%m/%d/") << @user_name << ':'
-        - elsif @report_copy_flag == true
-          = f.text_field :title, class: 'a-text-input js-warning-form', value: @report_title
-        - else
         .form-item
-          = f.label :practice
-          = f.select :practice_ids, options_from_collection_for_select(Practice.all, :id, :title), {}, {multiple: true, name: 'report[practice_ids][]', class: 'form-control js-warning-form'}
-            = f.text_field :title, size: '10', class: 'form-item__text-input js-warning-form'
-          = f.text_field :title, class: 'a-text-input js-warning-form'
+          = f.label :title, class: 'a-label'
+          - if @report_flag == true
+            = f.text_field :title, class: 'a-text-input js-warning-form', value: '日報/' << @report_date.strftime("%Y/%m/%d/") << @user_name << ':'
+          - elsif @report_copy_flag == true
+            = f.text_field :title, class: 'a-text-input js-warning-form', value: @report_title
+          - else
+            = f.text_field :title, class: 'a-text-input js-warning-form'
+        .form-item
+          = f.label :practice, class: 'a-label'
+          .many-check-boxes
+            ul.many-check-boxes__items
+              - Practice.all.each do |item|
+                li.many-check-boxes__item
+                  label.many-check-boxes__item-label
+                    = check_box_tag 'report[practice_ids][]', item.id
+                    = item.title
   .form-item
     .row.js-markdown-parent
       .col-md-6.col-xs-12
