--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -8,6 +8,12 @@
         = report.user.login_name
       time.report__created-at(datetime="#{report.created_at.to_datetime}" pubdate="pubdate")
         = l report.updated_at, format: :date_long_with_time
+    - if @report.practices.present?
+      ul.report-practices__practices
+        - report.practices.each do |practice|
+          li.report-practices__practice
+            = link_to practice do
+              span= practice.title
     .report__description.js-target-blank.is-long-text-style
       = emojify(markdown(report.description))
     footer.report__body-footer
